# SPAM_everything

LiveKit_demo/voice-agent/: .env.example  .gitignore  README.md  agent.py  info.md  pyproject.toml  tools.py
LiveKit_demo/voice-agent/data/: knowledge_base.txt
LiveKit_demo/voice-agent/data/chroma_db/: chroma.sqlite3
LiveKit_demo/voice-agent/docs/: plan.md
LiveKit_demo/voice-agent/ex/: agent.py
LiveKit_demo/voice-agent/frontend/: index.html
LiveKit_demo/voice-agent/knowledge/: rag_file.txt
LiveKit_demo/voice-agent/scripts/: ingest_kb.py  test_rag.py
LiveKit_demo/voice-agent/src/: agent.py  prompts.py
LiveKit_demo/voice-agent/src/tools/: rag.py  tools.py
LiveKit_demo/voice-agent/src/voice_agent/: agent.py  config.py  main.py  rag.py
