[project]
name = "voice-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "livekit",
    "livekit-agents[openai]",
    "livekit-plugins-openai",
    "livekit-plugins-noise-cancellation",
    "langchain",
    "langchain-openai",
    "langchain-chroma", 
    "chromadb",
    "openai",
    "python-multipart",
    "aiofiles",
    "python-dotenv"
]
